--- a/web_static/8-index.html
+++ b/web_static/8-index.html
@@ -1,123 +1,129 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>AirBnB Clone</title>
-    <link rel="stylesheet" href="styles/4-common.css">
-    <link rel="stylesheet" href="styles/6-filters.css">
-    <link rel="stylesheet" href="styles/3-header.css">
-    <link rel="stylesheet" href="styles/3-footer.css">
-    <link rel="stylesheet" href="styles/8-places.css">
-    <link rel="shortcut icon" href="https://s3.amazonaws.com/intranet-projects-files/holbertonschool-higher-level_programming+/268/icon.png" type="image/x-icon">
-</head>
-<body style="margin: 0; padding: 0;">
-    <header>
-        <div class="logo"></div>
-    </header>
-    <div class="container">
-        <section class="filters">
-            <div class="locations">
-                <h3>States</h3>
-                <h4>California, Arozona...</h4>
-                <ul class="popover">
-                    <li>
-                        <h2>Arizona:</h2>
-                        <ul class="citys">
-                            <li><p>city1</p></li>
-                            <li><p>city2</p></li>
-                        </ul>
-                    </li>
-                    <li>
-                        <h2>California:</h2>
-                        <ul class="citys">
-                            <li><p>San Francisco</p></li>
-                            <li><p>Los Altos</p></li>
-                        </ul>
-                    </li>
-                </ul>
-            </div>
-            <div class="amenities">
-                <h3>Amenities</h3>
-                <h4>Internet, Kitchen</h4>
-                <ul class="popover">
-                    <li><p>Internet</p></li>
-                    <li><p>TV</p></li>
-                    <li><p>Kitchen</p></li>
-                    <li><p>Iron</p></li>
-                </ul>
-            </div>
-            <button>Search</button>
-        </section>
-        <section class="places">
-            <h1>Places</h1>
-            <article>
-                <h2>My home</h2>
-                <div class="price_by_night">
-                    <p>$80</p>
-                </div>
-                <div class="information">
-                    <div class="max_guest">
-                        <p>2 Guests</p>
+	<head>
+		<title>AirBnB clone</title>
+
+		<link rel="shortcut icon" href="images/icon.ico" >
+
+		<link rel="stylesheet" href="styles/4-common.css"/>
+		<link rel="stylesheet" href="styles/3-header.css"/>
+		<link rel="stylesheet" href="styles/3-footer.css"/>
+		<link rel="stylesheet" href="styles/6-filters.css"/>
+		<link rel="stylesheet" href="styles/8-places.css"/>
+	</head>
+    <body>
+		<header>
+			<div id="header_logo"></div>
+		</header>
+		<div class="container">
+			<section class="filters">
+				<button>Search</button>
+				<div class="locations">
+					<h3>States</h3>
+					<h4>California, Arizona...</h4>
+					<ul class="popover">
+						<li><h2>Arizona</h2>
+							<ul>
+								<li><h4>Page</h4></li>
+								<li><h4>Page2</h4></li>
+							</ul></li>
+						<li><h2>California</h2>
+							<ul>
+								<li><h4>San Francisco</h4></li>
+								<li><h4>Los Altos</h4></li>
+							</ul></li>
+					</ul>
+				</div>
+				<div class="amenities">
+					<h3>Amenities</h3>
+					<h4>Internet, Kitchen...</h4>
+					<ul class="popover">
+						<li><h4>Internet</h4></li>
+						<li><h4>TV</h4></li>
+						<li><h4>Kitchen</h4></li>
+						<li><h4>Iron</h4></li>
+					</ul>
+				</div>
+
+			</section>
+			<section class="places">
+				<h1>Places</h1>
+				<article>
+					<div class="headline">
+						<h2>My home</h2>
+						<div class="price_by_night">$80</div>
+					</div>
+					<div class="information">
+						<div class="max_guest">
+							<div class="guest_icon"></div>
+							<p>2 Guests</p>
+						</div>
+						<div class="number_rooms">
+							<div class="bed_icon"></div>
+							<p>1 Bedroom</p>
+						</div>
+						 <div class="number_bathrooms">
+							<div class="bath_icon"></div>
+							<p>1 Bathroom</p>
+						</div>
+					</div>
+					<div class="user"><b>Owner</b>: John Lennon</div>
+					<div class="description">
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
                     </div>
-                    <div class="number_rooms">
-                        <p>1 Bedroom</p>
+				</article>
+				<article>
+					<div class="headline">
+						<h2>Tiny house</h2>
+						<div class="price_by_night">$65</div>
+					</div>
+					<div class="information">
+                        <div class="max_guest">
+                            <div class="guest_icon"></div>
+                            <p>4 Guests</p>
+                        </div>
+                        <div class="number_rooms">
+                            <div class="bed_icon"></div>
+                            <p>2 Bedroom</p>
+                        </div>
+                         <div class="number_bathrooms">
+                            <div class="bath_icon"></div>
+                            <p>1 Bathroom</p>
+                        </div>
                     </div>
-                    <div class="number_bathrooms">
-                        <p>1 Bathroom</p>
+					<div class="user"><b>Owner</b>: Adrienne</div>
+					<div class="description">
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
                     </div>
-                </div>
-                <div class="user"><b>Owner:</b> John Lennon</div>
-                <div class="description">
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt praesentium consequatur mollitia cum quam cupiditate delectus ipsa sapiente ea nostrum quo fuga commodi provident, sed laborum non fugit sit beatae! Id error, cupiditate velit quibusdam esse magnam eligendi. Praesentium, culpa.</p>
-                </div>
-            </article>
-            <article>
-                <h2>Tiny house</h2>
-                <div class="price_by_night">
-                    <p>$65</p>
-                </div>
-                <div class="information">
-                    <div class="max_guest">
-                        <p>2 Guests</p>
+				</article>
+				<article>
+					<div class="headline">
+						<h2>A suite</h2>
+						<div class="price_by_night">$180</div>
+					</div>
+					<div class="information">
+                        <div class="max_guest">
+                            <div class="guest_icon"></div>
+                            <p>5 Guests</p>
+                        </div>
+                        <div class="number_rooms">
+                            <div class="bed_icon"></div>
+                            <p>3 Bedroom</p>
+                        </div>
+                         <div class="number_bathrooms">
+                            <div class="bath_icon"></div>
+                            <p>2 Bathroom</p>
+                        </div>
                     </div>
-                    <div class="number_rooms">
-                        <p>1 Bedroom</p>
-                    </div>
-                    <div class="number_bathrooms">
-                        <p>1 Bathroom</p>
-                    </div>
-                </div>
-                <div class="user"><b>Owner:</b> Adrienne</div>
-                <div class="description">
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta laborum itaque delectus molestias cupiditate provident suscipit natus animi incidunt voluptatum. Libero mollitia ea nesciunt harum odio, enim itaque tempore. Accusantium!</p>
-                </div>
-            </article>
-            <article>
-                <h2>A suite</h2>
-                <div class="price_by_night">
-                    <p>$190</p>
-                </div>
-                <div class="information">
-                    <div class="max_guest">
-                        <p>2 Guests</p>
-                    </div>
-                    <div class="number_rooms">
-                        <p>1 Bedroom</p>
-                    </div>
-                    <div class="number_bathrooms">
-                        <p>1 Bathroom</p>
-                    </div>
-                </div>
-                <div class="user"><b>Owner:</b> John Lennon</div>
-                <div class="description">
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo est, ab amet sunt fuga impedit voluptates laboriosam eum excepturi quos! Ipsam minus adipisci veritatis earum rem, molestias soluta fugit dicta maiores, ducimus beatae iure labore laboriosam mollitia officiis. Odit iusto dolorum libero doloribus odio necessitatibus. In nobis natus dolore reiciendis?</p>
-                </div>
-            </article>
-        </section>
-    </div>
-    <footer>
-        <b>Best School</b>
-    </footer>
-</body>
+					<div class="user"><b>Owner</b>: Betty Holberton</div>
+					<div class="description">
+						Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+					</div>
+				</article>
+			</section>
+		</div>
+		<footer>
+			<p>Holberton School</p>
+		</footer>
+	</body>
 </html>
